<resources>
    <string name="app_name">Clean Water</string>
    <string name="clean_water">Clean Water</string>
    <string name="welcome_text">Определение экологического состояния водоёма</string>
    <string name="description">People looking at globe with various flora and fauna</string>
    <string name="registration_text">Зарегистрироваться</string>
    <string name="login_text">Уже есть аккаунт?</string>
    <string name="add">Добавить</string>
    <string name="research">Исследования</string>
    <string name="profile">Профиль</string>
    <string name="login_button_text">Войти</string>
    <string name="buy_text">Приобрести pro</string>
    <string name="no_buy_text">Нет, спасибо</string>
    <string name="continue_button">Начать</string>
    <string name="version_selection_text">Вы откроете для себя много полезного если продолжите на Pro версии</string>
    <string name="snackbar_buy">В данный момент полная версия недоступна для покупки</string>
    <string name="snackbar_clear">Ясно</string>
    <string name="total">Всего</string>
    <string name="species_lang">Разновидности</string>
    <string name="species_latin">Species</string>
    <string name="amount">Кол</string>
    <string name="sample_text">Пробы</string>
    <string name="main_information_text">Основная информация</string>
    <string name="date">Дата</string>
    <string name="locality">Населенный пункт</string>
    <string name="reservoir">Водоем</string>
    <string name="coordinates">Координаты, DD:dd</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="save_button">Сохранить</string>
    <string name="index">ИНДЕКС</string>
    <string name="further">Далее</string>
    <string name="hydrobiont_image">Гидробионт</string>
    <string name="result">Итог</string>
    <string name="sponsors">ИМКТ Зеленый крест</string>
    <string name="empty_text_one">Здесь пока пусто</string>
    <string name="empty_text_two">Начните свое первое исследование</string>
    <string name="pro">Pro</string>

    <string-array name="length_stream">
        <item>Ручей (&lt; 1км)</item>
        <item>Ручей (&gt;1км &lt;5 км)</item>
        <item>Ручей (&gt;5 км)</item>
    </string-array>
    <string-array name="part_river_basin">
        <item>Верховье</item>
        <item>Средняя часть</item>
        <item>Низовье</item>
        <item>Устье</item>
    </string-array>
    <string-array name="longitudinal_zone">
        <item>Креналь</item>
        <item>Ритраль </item>
        <item>Потамаль </item>
    </string-array>
    <string-array name="longitudinal_element_riverbed">
        <item>Перекат</item>
        <item>Слив</item>
        <item>Плес</item>
    </string-array>
    <string-array name="transverse_element_riverbed">
        <item>Рипаль</item>
        <item>Медиаль</item>
    </string-array>
    <string-array name="bottom_substrate_type">
        <item>Песчанный</item>
        <item>Песчанно-илистый</item>
        <item>Илистый</item>
    </string-array>
</resources>