<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/description"
        android:src="@mipmap/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/shape"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/ic_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_text_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/clean_water"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture" />

    <TextView
        android:id="@+id/welcome_text_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="67dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_one" />

    <TextView
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_button"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/continue_button"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/registration_button"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="23dp"-->
    <!--        android:text="@string/registration_text"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textColor="@color/blue"-->
    <!--        android:textSize="20sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:typeface="normal"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/login_button"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/login_button"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="35dp"-->
    <!--        android:text="@string/login_text"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textColor="@color/blue"-->
    <!--        android:textSize="16sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:typeface="normal"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>