<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sample_text"
        android:textColor="@color/dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/sample_text">

        <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/species_lang"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/species_lang"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/species_latin"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@drawable/ic_block_species_top"
                android:gravity="center"
                android:text="@string/species_latin"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/amount"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@drawable/ic_block_percent_top"
                android:gravity="center"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/samples_total"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/samples_total">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@drawable/ic_block_species_bottom"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount_total"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@drawable/ic_block_percent_bottom"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>